[gd_scene load_steps=9 format=2]

[ext_resource path="res://raw_assets/fonts/SafetyThirdRegular-vmm77.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/main_menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://src/ui/settings_popup/settings_popup.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/controls_popup/controls_popup.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/credits_popup/credits_popup.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/leaderboard_popup/LeaderboardPopup.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 2
extra_spacing_space = 2
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 150.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
anchor_left = 0.0195313
anchor_top = 0.0666667
anchor_right = 0.980469
anchor_bottom = 0.933333
margin_left = -5.14984e-05
margin_top = -20.0
margin_right = -6.10352e-05
margin_bottom = 133.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Title" type="Label" parent="Panel/VBoxContainer2"]
modulate = Color( 0.0156863, 0.196078, 0.458824, 1 )
margin_right = 984.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
text = "THRIVE: A VR PLATFORMER"
align = 1
valign = 1

[node name="Buttons" type="CenterContainer" parent="Panel/VBoxContainer2"]
margin_top = 181.0
margin_right = 984.0
margin_bottom = 673.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer2/Buttons"]
margin_left = 150.0
margin_right = 834.0
margin_bottom = 492.0
custom_constants/separation = 10

[node name="EnterNameLabel" type="Label" parent="Panel/VBoxContainer2/Buttons/VBoxContainer"]
margin_right = 684.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "Enter name for leaderboards:"

[node name="EnterNameLineEdit" type="LineEdit" parent="Panel/VBoxContainer2/Buttons/VBoxContainer"]
margin_top = 57.0
margin_right = 684.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )

[node name="BtnLevel" type="Button" parent="Panel/VBoxContainer2/Buttons/VBoxContainer"]
self_modulate = Color( 0.984314, 0.980392, 0.980392, 1 )
margin_top = 124.0
margin_right = 684.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 1 )
text = "Level Select"

[node name="BtnLeaderboard" type="Button" parent="Panel/VBoxContainer2/Buttons/VBoxContainer"]
margin_top = 187.0
margin_right = 684.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
text = "Leaderboard"

[node name="BtnSettings" type="Button" parent="Panel/VBoxContainer2/Buttons/VBoxContainer"]
margin_top = 250.0
margin_right = 684.0
margin_bottom = 303.0
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="BtnControls" type="Button" parent="Panel/VBoxContainer2/Buttons/VBoxContainer"]
margin_top = 313.0
margin_right = 684.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 1 )
text = "Controls"

[node name="BtnCredits" type="Button" parent="Panel/VBoxContainer2/Buttons/VBoxContainer"]
margin_top = 376.0
margin_right = 684.0
margin_bottom = 429.0
custom_fonts/font = SubResource( 1 )
text = "Credits"

[node name="BtnExit" type="Button" parent="Panel/VBoxContainer2/Buttons/VBoxContainer"]
margin_top = 439.0
margin_right = 684.0
margin_bottom = 492.0
custom_fonts/font = SubResource( 1 )
text = "Exit"

[node name="SettingsPopup" parent="." instance=ExtResource( 3 )]

[node name="ControlsPopup" parent="." instance=ExtResource( 4 )]

[node name="CreditsPopup" parent="." instance=ExtResource( 5 )]
visible = false

[node name="LeaderboardPopup" parent="." instance=ExtResource( 6 )]

[connection signal="focus_entered" from="Panel/VBoxContainer2/Buttons/VBoxContainer/EnterNameLineEdit" to="." method="_on_EnterNameLineEdit_focus_entered"]
[connection signal="text_entered" from="Panel/VBoxContainer2/Buttons/VBoxContainer/EnterNameLineEdit" to="." method="_on_EnterNameLineEdit_text_entered"]
[connection signal="pressed" from="Panel/VBoxContainer2/Buttons/VBoxContainer/BtnLevel" to="." method="_on_btn_level_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/Buttons/VBoxContainer/BtnLeaderboard" to="." method="_on_BtnLeaderboard_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/Buttons/VBoxContainer/BtnSettings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/Buttons/VBoxContainer/BtnControls" to="." method="_on_btn_controls_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/Buttons/VBoxContainer/BtnCredits" to="." method="_on_BtnCredits_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/Buttons/VBoxContainer/BtnExit" to="." method="_on_btn_exit_pressed"]
[connection signal="play_menu_click" from="SettingsPopup" to="." method="_on_SettingsPopup_play_menu_click"]
[connection signal="play_menu_click" from="ControlsPopup" to="." method="_on_ControlsPopup_play_menu_click"]
[connection signal="play_menu_click" from="CreditsPopup" to="." method="_on_CreditsPopup_play_menu_click"]
[connection signal="play_menu_click" from="LeaderboardPopup" to="." method="_on_LeaderboardPopup_play_menu_click"]
